--- a/envs/sc2mfc.yml
+++ b/envs/sc2mfc.yml
@@ -1,125 +1,164 @@
 name: sc2mfc
 channels:
   - anaconda
-  - bioconda
   - conda-forge
+  - bioconda
+  - default
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - bcftools=1.13=h3a49de5_0
-  - biopython=1.78=py39h3811e60_2
-  - brotli=1.0.9=h166bdaf_9
-  - brotli-bin=1.0.9=h166bdaf_9
-  - brotlipy=0.7.0=py39h27cfd23_1003
-  - bzip2=1.0.8=h7b6447c_0
-  - c-ares=1.19.0=h5eee18b_0
-  - ca-certificates=2023.08.22=h06a4308_0
-  - certifi=2023.7.22=py39h06a4308_0
-  - cffi=1.15.1=py39h74dc2b5_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - contourpy=1.0.2=py39hf939315_2
-  - cryptography=39.0.1=py39h9ce1e76_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - dbus=1.13.6=h48d8840_2
-  - emboss=6.6.0=h1b6f16a_5
-  - et_xmlfile=1.1.0=py39h06a4308_0
-  - expat=2.4.9=h6a678d5_0
-  - fontconfig=2.13.1=h6c09931_0
-  - fonttools=4.42.0=py39hd1e30aa_0
-  - freetype=2.11.0=h70c0345_0
-  - gdbm=1.18=hd4cb3f1_4
-  - gettext=0.21.1=h27087fc_0
-  - glib=2.68.4=h9c3ff4c_0
-  - glib-tools=2.68.4=h9c3ff4c_0
-  - gsl=2.6=ha341630_0
-  - gst-plugins-base=1.14.0=h8213a91_2
-  - gstreamer=1.14.0=h28cd5cc_2
-  - htslib=1.13=h9093b5e_0
-  - icu=58.2=he6710b0_3
-  - idna=3.4=py39h06a4308_0
-  - jpeg=9e=h5eee18b_1
-  - kiwisolver=1.4.2=py39hf939315_1
-  - krb5=1.19.2=hac12032_0
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.35.1=hea4e1c9_2
-  - libblas=3.9.0=8_openblas
-  - libbrotlicommon=1.0.9=h166bdaf_9
-  - libbrotlidec=1.0.9=h166bdaf_9
-  - libbrotlienc=1.0.9=h166bdaf_9
-  - libcblas=3.9.0=8_openblas
-  - libcurl=7.82.0=h0b77cf5_0
-  - libdeflate=1.17=h5eee18b_0
-  - libedit=3.1.20210714=h7f8727e_0
-  - libev=4.33=h7f8727e_1
-  - libffi=3.3=h58526e2_2
-  - libgcc-ng=12.2.0=h65d4601_19
-  - libgd=2.3.3=h695aa2c_1
-  - libgfortran-ng=9.3.0=hff62375_19
-  - libgfortran5=9.3.0=hff62375_19
-  - libglib=2.68.4=h3e27bee_0
-  - libgomp=12.2.0=h65d4601_19
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=8_openblas
-  - libnghttp2=1.46.0=hce63b2e_0
-  - libopenblas=0.3.12=pthreads_h4812303_1
-  - libpng=1.6.37=hbc83047_0
-  - libssh2=1.10.0=h8f2d780_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libtiff=4.2.0=h85742a9_0
-  - libuuid=1.41.5=h5eee18b_0
-  - libwebp-base=1.2.4=h5eee18b_1
-  - libxcb=1.15=h0b41bf4_0
-  - libxml2=2.9.12=h03d6c58_0
-  - libzlib=1.2.11=h166bdaf_1014
-  - lz4-c=1.9.4=h6a678d5_0
-  - matplotlib=3.6.2=py39hf3d152e_0
-  - matplotlib-base=3.6.2=py39h945d387_0
-  - more-itertools=8.7.0=pyhd8ed1ab_1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.2=h58526e2_4
-  - numpy=1.20.1=py39hdbf815f_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openjpeg=2.4.0=hb52868f_1
-  - openpyxl=3.0.10=py39h5eee18b_0
-  - openssl=1.1.1w=h7f8727e_0
-  - packaging=20.9=pyh44b312d_0
-  - pandas=1.3.4=py39hde0f152_1
-  - pango_aliasor=0.3.0=pyhdfd78af_0
-  - pcre=8.45=h9c3ff4c_0
-  - perl=5.34.0=h5eee18b_2
-  - pillow=8.2.0=py39hf95b381_1
-  - pip=21.0.1=pyhd8ed1ab_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pyopenssl=23.0.0=py39h06a4308_0
-  - pyparsing=2.4.7=pyhd8ed1ab_1
-  - pyqt=5.9.2=py39h2531618_6
-  - pysocks=1.7.1=py39h06a4308_0
-  - python=3.9.2=hffdb5ce_0_cpython
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python_abi=3.9=3_cp39
-  - pytz=2022.7=py39h06a4308_0
-  - pyyaml=6.0=py39hb9d737c_5
-  - qt=5.9.7=h5867ecd_1
-  - readline=8.0=he28a2e2_2
-  - requests=2.27.1=pyhd8ed1ab_0
-  - setuptools=49.6.0=py39hf3d152e_3
-  - sip=4.19.13=py39h295c915_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.34.0=h74cdb3f_0
-  - tk=8.6.10=h21135ba_1
-  - tornado=6.3.2=py39hd1e30aa_0
-  - tqdm=4.59.0=pyhd8ed1ab_0
-  - tzdata=2021a=he74cb21_1
-  - unicodedata2=15.0.0=py39hb9d737c_0
-  - urllib3=1.26.15=py39h06a4308_0
-  - wheel=0.36.2=pyhd3deb0d_0
-  - xlsxwriter=3.1.2=pyhd8ed1ab_0
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h7f98852_2
-  - zlib=1.2.11=h166bdaf_1014
-  - zstd=1.4.9=haebb681_0
-prefix: /home/ghassemia/.conda/envs/sonar
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - appdirs=1.4.4
+  - attrs=22.2.0
+  - bcftools=1.13
+  - biopython=1.78
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - c-ares=1.18.1
+  - ca-certificates=2023.08.22
+  - certifi=2023.11.17
+  - cffi=1.14.6
+  - charset-normalizer=2.0.12
+  - clustalw=2.1
+  - configargparse=1.5.3
+  - cryptography=3.4.7
+  - cycler=0.11.0
+  - datrie=0.8.2
+  - decorator=5.1.1
+  - dendropy=4.5.2
+  - docutils=0.19
+  - emboss=6.6.0
+  - et_xmlfile=1.1.0
+  - expat=2.5.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.0
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.10.4
+  - giflib=5.2.1
+  - gitdb=4.0.10
+  - gitpython=3.1.31
+  - gsl=2.6
+  - htslib=1.13
+  - icu=70.1
+  - idna=3.4
+  - importlib-metadata=6.0.0
+  - importlib_resources=5.12.0
+  - iqtree=1.6.12
+  - jbig=2.1
+  - joblib=1.2.0
+  - jpeg=9e
+  - jsonschema=4.17.3
+  - jupyter_core=5.2.0
+  - kiwisolver=1.4.4
+  - krb5=1.19.2
+  - lcms2=2.12
+  - ld_impl_linux-64=2.35.1
+  - lerc=2.2.1
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libcurl=7.78.0
+  - libdeflate=1.7
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libffi=3.3
+  - libgcc-ng=12.2.0
+  - libgd=2.3.3
+  - libgfortran-ng=9.3.0
+  - libgfortran5=9.3.0
+  - libgomp=12.2.0
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libnghttp2=1.43.0
+  - libnsl=2.0.0
+  - libopenblas=0.3.12
+  - libpng=1.6.37
+  - libssh2=1.10.0
+  - libstdcxx-ng=12.2.0
+  - libtiff=4.3.0
+  - libuuid=2.32.1
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
+  - libzlib=1.2.11
+  - lz4-c=1.9.3
+  - mafft=7.515
+  - matplotlib=3.3.2
+  - matplotlib-base=3.3.2
+  - matplotlib-venn=0.11.9
+  - more-itertools=8.7.0
+  - mpi=1.0
+  - nbformat=5.7.3
+  - ncurses=6.2
+  - numpy=1.20.1
+  - olefile=0.46
+  - openjpeg=2.5.0
+  - openmpi=4.1.3
+  - openpyxl=3.0.10
+  - openssl=1.1.1w
+  - packaging=20.9
+  - pandas=1.3.4
+  - pango_aliasor=0.3.0
+  - pangolin=1.1.14
+  - perl=5.32.1
+  - phyml=3.3.20211231
+  - pillow=8.3.1
+  - pip=21.0.1
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=3.1.0
+  - psutil=5.9.4
+  - pycparser=2.21
+  - pyopenssl=21.0.0
+  - pyparsing=2.4.7
+  - pyrsistent=0.19.3
+  - pysocks=1.7.1
+  - python=3.9.2
+  - python-dateutil=2.8.2
+  - python-fastjsonschema=2.16.3
+  - python_abi=3.9
+  - pytools=2020.1
+  - pytz=2022.7
+  - pyyaml=6.0
+  - ratelimiter=1.2.0
+  - raxml=8.2.12
+  - readline=8.0
+  - requests=2.27.1
+  - scikit-learn=1.2.2
+  - scipy=1.5.3
+  - seaborn=0.12.2
+  - setuptools=49.6.0
+  - six=1.16.0
+  - smmap=3.0.5
+  - snakemake-minimal=5.13.0
+  - sqlite=3.34.0
+  - threadpoolctl=2.2.0
+  - tk=8.6.10
+  - toposort=1.10
+  - tornado=6.3.2
+  - tqdm=4.59.0
+  - traitlets=5.9.0
+  - typing-extensions=4.4.0
+  - typing_extensions=4.4.0
+  - tzdata=2021a
+  - urllib3=1.26.14
+  - wheel=0.36.2
+  - wrapt=1.15.0
+  - xlsxwriter=3.1.2
+  - xz=5.2.5
+  - yaml=0.2.5
+  - zipp=3.15.0
+  - zlib=1.2.11
+  - zstd=1.5.2
+  - pip:
+    - click==8.1.7
+    - colorama==0.4.6
+    - commonmark==0.9.1
+    - lineages==2020-05-19
+    - pango-collapse==0.7.0
+    - pygments==2.16.1
+    - rich==12.6.0
+    - shellingham==1.5.3
+    - typer==0.6.1
+prefix: /home/ashkan/mambaforge/envs/sonar
